--- a/src/Components/Page2/Page2.css
+++ b/src/Components/Page2/Page2.css
@@ -6,7 +6,7 @@
     padding-right: 4%;
     padding-top: 5%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 3.5vh;
+    font-size: 1.3rem;
 }
 .p2:hover .heading {
     color: rgb(26, 110, 110);
@@ -14,12 +14,12 @@
 
 .heading{
     text-align: center;
-    font-size: 5vh;
+    font-size: 2rem;
     font-weight: 600;
 }
 .heading1{
     text-align: center;
-    font-size: 5vh;
+    font-size: 1.5rem;
 }
 
 .p3{
@@ -28,7 +28,7 @@
     padding-left: 13%;
     padding-right: 13%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 3.5vh;
+    font-size: 1.3rem;
 }
 
 .p3:hover .heading {
@@ -50,7 +50,7 @@
     box-sizing: border-box;
     border: 1px solid rgba(141, 132, 132, 0.409);
     text-align: center;
-    font-size: 4vh;
+    font-size: 1.3rem;
     padding: 10px;
     background-color: whitesmoke;
     cursor: pointer;
@@ -61,7 +61,7 @@
     box-sizing: border-box;
     border: 1px solid  rgba(141, 132, 132, 0.409);
     text-align: center;
-    font-size: 4vh;
+    font-size: 1.3rem;
     padding: 10px;
     background-color: whitesmoke;
     cursor: pointer;
@@ -71,7 +71,7 @@
     padding-top: 5%;
     padding-left: 8%;
     padding-right: 8%;
-    display: flex;
+    /* display: flex; */
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .mainten{
@@ -79,7 +79,7 @@
     height: 250px;
     box-sizing: border-box;
     border: 1px solid rgba(141, 132, 132, 0.409);
-    font-size: 3.5vh;
+    font-size: 1.2rem;
     padding: 10px;
     color: rgb(76, 72, 72);
     border-bottom: none;
@@ -91,7 +91,7 @@
 
 .Quote{
     background-color: rgba(114, 210, 210, 0.58);
-    height: 40vh;
+    padding-bottom: 55px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: rgb(76, 72, 72);
     text-align: center;
@@ -106,7 +106,7 @@
 .QuoteHeading{
     padding-top: 20px;
     text-align: center;
-    font-size: 5vh;
+    font-size: 1.5rem;
     margin-bottom: 0%;
 }
 .fill{
